SERVER-54585 Move support for `findAndModify` to the write_ops utilities

... also clean up the include files.

GitOrigin-RevId: c2923d27a9bf945cb115ee8e0f097be1cc48255a